name:                parceed
version:             0.1.0.0
description:         
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable parceed-importer
  hs-source-dirs: importer/src
  main-is:        Main.hs
  -- ghc-options:    -static -Wall -threaded -j -O2
  ghc-options:    -Wall -threaded -O0 -static
  buildable: True
  build-depends:
      base >= 4 && < 5
    , text
    , attoparsec
    , mtl
    , stm
    , transformers
    , aeson
    , bytestring
    , containers
    , lens
    , vector
    , cassava


